# esp-osqp-demo

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/osqp_gen/: CMakeLists.txt
components/osqp_gen/include/: osqp_configure.h  qdldl_types.h  workspace.h
components/osqp_gen/src/osqp/: workspace.c
main/: CMakeLists.txt  esp-osqp.c
